
	* Fixed a fatal bug in Irssi SILC client. Crashed if sent message
	  to in-active server.  The affected file is
	  irssi/src/silc/core/client_ops.c.

	* Resolve the client in USERS command reply if the entry does
	  not have username resolved.  The affected file is
	  lib/silcclient/command_reply.c.  Also, changed the IDENTIFY
	  command to WHOIS command to really resolve stuff.  The USERS
	  is not used an ymore in any critical section so WHOIS can
	  be used even though it might be slower than IDENTIFY.

Sun Jun  3 14:21:32 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Changed the protocol API a bit more consistent in the
	  lib/silccore/silcprotocol.[ch].

	* Changed the following headers to ROBODoc format:

		lib/silccore/silcpayload.h
		lib/silccore/silcprotocol.h
		lib/silccore/silcsockconn.h

	  All core library headers are now formatted.

Sat Jun  2 10:45:09 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a bug in Irssi SILC client; do not show that you are
	  server/router operator if you really are not.  Affected file is
	  irssi/src/silc/core/client_ops.c.

	* Renamed silc_command_free_payload to silc_command_payload_free.
	  Affected file lib/silccore/silccommand.h

	* Added silcmath.h to include the prototoypes of various routines
	  in the lib/silcmath.  Removed the old modinv.h, mpbin.h and
	  silcprimegen.h.

	* Changed the following headers to ROBODoc format:

		lib/silccore/silcchannel.h
		lib/silccore/silccommand.h
		lib/silccore/silcid.h
		lib/silccore/silcidcache.h
		lib/silccore/silcmode.h
		lib/silccore/silcnotify.h
		lib/silccore/silcpacket.h
		lib/silcmath/silcmath.h

Fri Jun  1 22:19:37 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added checking to the server code not to start the server if
	  ciphers and stuff are not configured properly.  Affected files
	  silcd/serverconfig.[h] and silcd/server.c.

	* Changed the layout of the header files of the public interfaces